/**
 * Autor: Maximiliano Pacheco Pérez
 * Fecha de Creación: 15/05/2023
 * Fecha de Actualización: 16/05/2023
 * Descripción: Primera intarfaz de Proyecto
 */
package entity;

public class Comida extends Menu{
    
}
